# gpts-compliance-insight

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
gci/: __init__.py  config.py  exceptions.py
gci/api/: __init__.py  client.py
gci/cache/: __init__.py  action.py  base.py  gpt.py  risk.py
gci/cli/: __init__.py  main.py
gci/cli/commands/: action.py  download.py  list.py  list_tui.py  risk.py
gci/cli/utils/: __init__.py  auth.py  data.py  list_shared.py  llm_command.py  options.py  output.py
gci/core/: __init__.py  constants.py  highlighting.py  search.py
gci/llm/: __init__.py  client.py  prompts.py
gci/models/: __init__.py  action.py  cache.py  gpt.py  risk.py  stats.py
gci/services/: __init__.py  action_analyzer.py  risk_classifier.py
