[project]
name = "gpts-compliance-insights"
version = "0.1.0"
description = "Open-source tool for generating reports on GPTs configurations using OpenAI Compliance API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "requests>=2.31.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.7.0",
    "textual>=0.47.0",
    "reportlab>=4.1.0",
    "backoff>=2.2.1",
    "tqdm>=4.66.0",
    "dateparser>=1.2.2",
    "pyperclip>=1.9.0",
    "xlsxwriter>=3.2.5",
    "vulture>=2.14",
    "diskcache>=5.6.3",
    "diskcache-stubs>=5.6.3.6.20240818",
    "rapidfuzz>=3.13.0",
    "tenacity>=9.1.2",
    "boto3>=1.40.16",
    "instructor>=1.10.0",
    "litellm>=1.75.9",
]

[project.scripts]
gci = "gci.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gci"]

[tool.uv]
package = true


[tool.pyright]
include = ["gci/"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"


[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (includes F401 unused imports, F841 unused variables)
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501", # Line too long - handled by formatter
]


[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-xdist>=3.6.1",
    "responses>=0.25.0",
    "ruff>=0.8.5",
    "pyflakes>=3.4.0",
    "pip-licenses>=5.0.0",
]
